name:                advent-of-code
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1
                     , Day2
                     , Day3
                     , Day4
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , split
                     , hashmap
                     , bytestring
                     , cryptohash
  default-language:    Haskell2010

executable advent-of-code-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , advent-of-code
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent-of-code
